#70 add model and resource for GroupOwnership
